fix: cards ul alignment

--- a/src/index.css
+++ b/src/index.css
@@ -640,9 +640,9 @@ li {
 
 .card-top {
   display: flex;
+  height: 100%;
   flex-direction: column;
   align-items: center;
-  padding: 30px 30px 0 30px;
 }
 
 .card-price {
@@ -664,9 +664,8 @@ li {
 .card-ul {
   display: grid;
   grid-template-columns: repeat(1, 1fr);
-  height: 100%;
-  gap: 10px;
-  padding: 20px;
+  justify-content: space-between;
+  height: 400px;
   border-top: 1px solid black;
 }
 
