--- a/src/sass/components/Card.scss
+++ b/src/sass/components/Card.scss
@@ -15,9 +15,9 @@
 .card-top {
   display: flex;
   // flex: 1;
+  height:100%;
   flex-direction: column;
   align-items: center;
-  padding: 30px 30px 0 30px;
 }
 
 .card-price {
@@ -37,9 +37,9 @@
 .card-ul {
   display: grid;
   grid-template-columns: repeat(1, 1fr);
-  height: 100%;
-  gap: 10px;
-  padding: 20px;
+  justify-content: space-between;
+  height: 400px;
+
   border-top: 1px solid black;
 }
 
